Fixed introduced formatting issues on mobile

--- a/app/templates/css/templatemo-xtra-blog.css
+++ b/app/templates/css/templatemo-xtra-blog.css
@@ -234,7 +234,7 @@ ul, ol {
 .form-inline .form-control.tm-rag-input {
     display: block;
     height: 60px;
-    width: 570px;
+    width: 480px;
     margin-right: 30px;
     border-radius: 0;
     border-color: #00684A;
